# detectzawgyi

./: CMakeLists.txt  CMakeLists.txt.android  CMakeLists.txt.ios  README.md  build-android.sh  build-ios.sh  deploy.sh  zawgyi_detector.cpp  zawgyi_model_data.inc
libicundk/include/unicode/: icundk.h  putil.h  ubiditransform.h  uchar.h  uclean.h  ucol.h  uconfig.h  ucsdet.h  udat.h  uidna.h  ulistformatter.h  upluralrules.h  ureldatefmt.h  ures.h  usearch.h  uspoof.h  utrans.h
